--- a/MEGA_PROJECT/src/main/frontend/src/App.css
+++ b/MEGA_PROJECT/src/main/frontend/src/App.css
@@ -1,34 +1,24 @@
-.App {
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -36,86 +26,17 @@
     transform: rotate(360deg);
   }
 }
-.fade-enter {
-  opacity: 0;
-}
-.fade-enter-active {
-  opacity: 1;
-  transition: opacity 1000ms ease-in-out; /* 애니메이션 시간을 1000ms로 설정 */
-}
-.fade-exit {
-  opacity: 1;
-}
-.fade-exit-active {
-  opacity: 0;
-  transition: opacity 1000ms ease-in-out; /* 애니메이션 시간을 1000ms로 설정 */
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
 }
 
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background-color: #f5f5f5;
+.card {
+  padding: 2em;
 }
 
-.container {
-  width: 80%;
-  margin: auto;
-  padding: 20px;
-  background: white;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-  color: #333;
-  text-align: center;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-ul li {
-  padding: 10px;
-  background: #f9f9f9;
-  margin: 10px 0;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-nav ul {
-  display: flex;
-  justify-content: space-around;
-  padding: 0;
-}
-
-nav ul li {
-  background: none;
-  box-shadow: none;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: #007BFF;
-  font-weight: bold;
-  padding: 10px 20px;
-  border-radius: 5px;
-  transition: background 0.3s ease-in-out;
-}
-
-nav ul li a:hover {
-  background: #007BFF;
-  color: white;
-}
-
-.fade-in {
-  opacity: 0;
-  transition: opacity 1000ms ease-in-out;
-}
-
-.fade-in.visible {
-  opacity: 1;
+.read-the-docs {
+  color: #888;
 }
