--- a/MEGA_PROJECT/src/main/frontend/src/components/ProjectCard/ProjectCard.css
+++ b/MEGA_PROJECT/src/main/frontend/src/components/ProjectCard/ProjectCard.css
@@ -30,5 +30,5 @@
 }
 
 .project-table tbody tr:hover {
-  background-color: #f9f9f9; /* 마우스 오버 시 배경색 변경 */
+  background-color: #fed5bf; /* 마우스 오버 시 배경색 변경 */
 }
