--- a/MEGA_PROJECT/src/main/frontend/src/components/Header/Header.css
+++ b/MEGA_PROJECT/src/main/frontend/src/components/Header/Header.css
@@ -7,7 +7,7 @@
   justify-content: space-between; /* h1과 버튼 영역을 양쪽에 배치 */
   align-items: center; /* 수직 가운데 정렬 */
   padding: 10px 10px; /* 상하, 좌우 여백 */
-  background-color: #2c3e50; /* 헤더 배경색 */
+  background-color: #76aade; /* 헤더 배경색 */
   color: white; /* 텍스트 색상 */
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); /* 아래에 그림자 효과 */
 }
@@ -23,12 +23,12 @@
   margin-left: 10px; /* 버튼 간의 간격 조정 */
   padding: 5px 10px; /* 버튼 내부 여백 */
   border: none; /* 테두리 제거 */
-  background-color: #34495e; /* 버튼 배경색 */
+  background-color: #1abc9c; /* 버튼 배경색 */
   color: white;
   cursor: pointer;
   border-radius: 4px; /* 버튼 모서리 둥글게 */
 }
 
 .header-controls button:hover {
-  background-color: #1abc9c; /* 버튼 호버 시 색상 변경 */
+  background-color: #e36450; /* 버튼 호버 시 색상 변경 */
 }
