--- a/MEGA_PROJECT/src/main/frontend/src/pages/Project.css
+++ b/MEGA_PROJECT/src/main/frontend/src/pages/Project.css
@@ -23,6 +23,11 @@
   font-size: 2rem;
   font-weight: 700;
   color: #333;
+  margin-bottom: 10px;
+}
+
+.project-info {
+  margin-top: 10px;
 }
 
 .quote-box {
