--- a/MEGA_PROJECT/src/main/frontend/src/pages/NoticeComponent.css
+++ b/MEGA_PROJECT/src/main/frontend/src/pages/NoticeComponent.css
@@ -44,6 +44,22 @@
     cursor: pointer;
 }
 
+.right-align-button {
+    margin-left: auto; /* 오른쪽 끝으로 정렬 */
+    display: block;
+    padding: 10px 15px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.right-align-button:hover {
+    background-color: #0056b3;
+}
+
 .notice-input button:hover {
     background-color: #0056b3;
 }
