--- a/MEGA_PROJECT/src/main/frontend/src/pages/Profile.css
+++ b/MEGA_PROJECT/src/main/frontend/src/pages/Profile.css
@@ -1,6 +1,6 @@
 /* profile.css */
 .profile-container {
-    max-width: 600px;
+    min-width: 600px;
     margin: 0 auto;
     padding: 20px;
     font-family: Arial, sans-serif;
