--- a/MEGA_PROJECT/src/main/frontend/src/pages/NewProject.css
+++ b/MEGA_PROJECT/src/main/frontend/src/pages/NewProject.css
@@ -1,5 +1,5 @@
 .new-project-container {
-  max-width: 450px;
+  min-width: 450px;
   margin: 50px auto;
   padding: 20px;
   background-color: #f9f9f9;
